[feature] Protocol Owned Liquidity
